--- a/learn-create-share/package.json
+++ b/learn-create-share/package.json
@@ -14,6 +14,7 @@
     "dompurify": "^3.0.6",
     "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
